# fuzzy-logic

./: .gitignore  AGENT.md  Cargo.toml  README.md
src/: control.rs  decision.rs  defuzzification.rs  inference.rs  lib.rs  linguistic.rs  membership.rs  operations.rs  relations.rs  rules.rs
